--- a/MVCSample/Views/Home/Index.cshtml
+++ b/MVCSample/Views/Home/Index.cshtml
@@ -96,7 +96,7 @@
 
           , msgbox: layui.cache.dir + 'css/modules/layim/html/msgbox.html' //消息盒子页面地址，若不开启，剔除该项即可
           , find: layui.cache.dir + 'css/modules/layim/html/find.html' //发现页面地址，若不开启，剔除该项即可
-          , chatLog: layui.cache.dir + 'css/modules/layim/html/chatLog.html' //聊天记录页面地址，若不开启，剔除该项即可
+          , chatLog: '/Home/ChatLog' //聊天记录页面地址，若不开启，剔除该项即可
 
         });
 
