--- a/MVCSample/Views/Home/Index.cshtml
+++ b/MVCSample/Views/Home/Index.cshtml
@@ -44,7 +44,8 @@
                 url: '/layim/token',//这里配置自己的token服务域名
                 uselocal:true
             },
-            layim: layim
+            layim: layim,
+            autoConnect:false
         });
         //基础配置
         layim.config({
