--- a/MVCSample/Views/Home/Index.cshtml
+++ b/MVCSample/Views/Home/Index.cshtml
@@ -45,7 +45,7 @@
                 uselocal:true
             },
             layim: layim,
-            autoConnect:false
+            autoConnect:true
         });
         //基础配置
         layim.config({
