--- a/MVCSample/Views/Home/Index.cshtml
+++ b/MVCSample/Views/Home/Index.cshtml
@@ -62,7 +62,7 @@
 
             //上传图片接口
           , uploadImage: {
-              url: '/layim/img' //（返回的数据格式见下文）
+              url: '/layim/init' //（返回的数据格式见下文）
             , type: '' //默认post
           }
 
