--- a/MVCSample/Views/Home/Index.cshtml
+++ b/MVCSample/Views/Home/Index.cshtml
@@ -96,7 +96,7 @@
             //,voice: false //声音提醒，默认开启，声音文件为：default.mp3
 
           , msgbox: layui.cache.dir + 'css/modules/layim/html/msgbox.html' //消息盒子页面地址，若不开启，剔除该项即可
-          , find: layui.cache.dir + 'css/modules/layim/html/find.html' //发现页面地址，若不开启，剔除该项即可
+          , find: '/home/apitest' //发现页面地址，若不开启，剔除该项即可
           , chatLog: '/layim/chatlog' //聊天记录页面地址，若不开启，剔除该项即可
 
         });
